--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "config": "^4.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
   }
