--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.6.0')
     implementation 'com.google.firebase:firebase-auth' // Example Firebase dependency
     implementation 'com.google.firebase:firebase-database'
+    implementation 'androidx.camera:camera-core:1.4.0-alpha02'
+    implementation 'androidx.camera:camera-camera2:1.4.0-alpha02'
+    implementation 'androidx.camera:camera-lifecycle:1.4.0-alpha02'
+    implementation 'androidx.camera:camera-video:1.4.0-alpha02'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 
 }
