--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,12 +58,19 @@ dependencies:
   rxdart: ^0.28.0
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
+  image_picker: ^1.1.2
+  image: ^4.5.4 # Required for YUV conversion
+  google_mlkit_pose_detection: ^0.14.0
+  # google_mlkit_commons: ^0.11.0
+  camera: ^0.10.0+4
+  path_provider: ^2.1.1
+
 firebase_analytics: ^11.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.14.4"
+  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
