implemented yoga pose detection using images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,11 @@ dependencies:
   readmore: ^3.0.0
   shared_preferences: ^2.3.4
   get: ^4.6.6
-  youtube_player_flutter: ^9.1.1
+  # youtube_player_flutter: ^9.1.1
   flutter_timezone: ^4.0.0
   rxdart: ^0.28.0
   permission_handler: ^12.0.0+1
+
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
   image: ^4.5.4 # Required for YUV conversion
@@ -64,6 +65,7 @@ dependencies:
   # google_mlkit_commons: ^0.11.0
   camera: ^0.10.0+4
   path_provider: ^2.1.1
+  tflite_flutter: ^0.11.0
 
 firebase_analytics: ^11.4.1
 
@@ -97,6 +99,9 @@ flutter:
   assets:
     - assets/img/
     - assets/img1/img/
+    - assets/angle_pose_model.tflite
+    - assets/label_map.json
+
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
