--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   collection: ^1.19.0
-  intl: 0.20.2
+  intl: ^0.20.2
   get_it: ^8.0.3
   provider: ^6.1.2
 
@@ -99,9 +99,12 @@ dependencies:
   camera: ^0.10.0+4
   path_provider: ^2.1.1
   tflite_flutter: ^0.11.0
+
+  # flutter_localizations:
+  #   sdk: flutter
+  logging: ^1.3.0
   flutter_localizations:
     sdk: flutter
-  logging: ^1.3.0
 
 firebase_analytics: ^11.4.1
 
